Continue second section

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
 
     <section class="benefits">
         <div class="container benefits__container">
+            <p class="benefits__badge">we<br>have</p>
             <div class="benefits__item">
                 <div class="benefits__img-wrapper">
                     <img src="images/icons/3d/heart.png" alt="" class="benefits__icon benefits__heard">
