--- a/index.html
+++ b/index.html
@@ -89,16 +89,43 @@
             </div>
         </div>
     </section>
-    
-    <section class="stats">
+
+    <section class="history">
         <div class="container">
-            <div class="stats__img-wrapper">
-                <img src="/images/room.jpg" alt="" class="stats__img">
+            <div class="history__img-wrapper">
+                <img src="/images/room.jpg" alt="" class="history__img">
             </div>
-            <div class="stats__text">
-                <h2 class="title stats__title">We make <span class="text-gradient">delicious</span></h2>
-                <p class="stats__desc">Only in 2021 we have made more than 100,000 orders for you, your loved ones, all of you, and in 2022 we are ready to destroy the market</p>
-                <img src="/images/kitchen.jpg" alt="" class="stats__pic">
+            <div class="history__text">
+                <h2 class="title history__title">We make <span class="text-gradient">delicious</span></h2>
+                <p class="history__desc">Only in 2021 we have made more than 100,000 orders for you, your loved ones,
+                    all of you, and in 2022 we are ready to destroy the market</p>
+                <img src="/images/kitchen.jpg" alt="" class="history__pic">
+            </div>
+        </div>
+    </section>
+
+    <section class="products">
+        <div class="container">
+            <div class="products__text">
+                <h2 class="title products__title">New Our <span class="text-gradient">Products</span></h2>
+                <p class="products__desc">
+                    Have time to buy the most harmonious drinks in the new Starbucks coffee and don't forget about the
+                    discount! Starbucks coffee and don't forget about the discount!
+                </p>
+                <div class="products__cards">
+                    <div class="card">
+                        <div class="card__img-wrapper">
+                            <img src="/images/cups/green.png" alt="" class="card__img">
+                        </div>
+                        <p class="card__title">Fast</p>
+                        <p class="card__desc">Our cafe will serve you quickly</p>
+                        <div class="card__row">
+                            <p class="card__price">7,45$</p>
+                            <p class="card__size">330 ml</p>
+                        </div>
+                        <button href="#!" class="btn card__btn">Buy Product</button>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
