--- a/index.html
+++ b/index.html
@@ -112,21 +112,22 @@
                     Have time to buy the most harmonious drinks in the new Starbucks coffee and don't forget about the
                     discount! Starbucks coffee and don't forget about the discount!
                 </p>
-                <div class="products__cards">
-                    <div class="card">
-                        <div class="card__img-wrapper">
-                            <img src="/images/cups/green.png" alt="" class="card__img">
-                        </div>
-                        <p class="card__title">Fast</p>
-                        <p class="card__desc">Our cafe will serve you quickly</p>
-                        <div class="card__row">
-                            <p class="card__price">7,45$</p>
-                            <p class="card__size">330 ml</p>
-                        </div>
-                        <button href="#!" class="btn card__btn">Buy Product</button>
+            </div>
+            <div class="products__cards">
+                <div class="card">
+                    <div class="card__img-wrapper">
+                        <img src="/images/cups/green%20without%20shedow.png" alt="" class="card__img">
                     </div>
+                    <p class="card__title">Fast</p>
+                    <p class="card__desc">Our cafe will serve you quickly</p>
+                    <div class="card__row">
+                        <p class="card__price">7,45$</p>
+                        <p class="card__size">330 ml</p>
+                    </div>
+                    <button href="#!" class="btn card__btn">Buy Product</button>
                 </div>
             </div>
+
         </div>
     </section>
 </main>
