--- a/index.html
+++ b/index.html
@@ -106,9 +106,9 @@
 
     <section class="products">
         <div class="container">
-            <div class="products__text">
-                <h2 class="title products__title">New Our <span class="text-gradient">Products</span></h2>
-                <p class="products__desc">
+            <div class="text-row">
+                <h2 class="title text-row__title">New Our <span class="text-gradient">Products</span></h2>
+                <p class="text-row__desc">
                     Have time to buy the most harmonious drinks in the new Starbucks coffee and don't forget about the
                     discount! Starbucks coffee and don't forget about the discount!
                 </p>
@@ -118,7 +118,7 @@
                     <div class="card__img-wrapper">
                         <img src="/images/cups/green%20without%20shedow.png" alt="" class="card__img">
                     </div>
-                    <p class="card__title">Fast</p>
+                    <p class="card__title">Latte</p>
                     <p class="card__desc">Our cafe will serve you quickly</p>
                     <div class="card__row">
                         <p class="card__price">7,45$</p>
@@ -126,8 +126,79 @@
                     </div>
                     <button href="#!" class="btn card__btn">Buy Product</button>
                 </div>
+                <div class="card">
+                    <div class="card__img-wrapper">
+                        <img src="/images/cups/brown%20without%20shedow.png" alt="" class="card__img">
+                    </div>
+                    <p class="card__title">Espresso</p>
+                    <p class="card__desc">Our cafe will serve you quickly</p>
+                    <div class="card__row">
+                        <p class="card__price">3,45$</p>
+                        <p class="card__size">330 ml</p>
+                    </div>
+                    <button href="#!" class="btn card__btn">Buy Product</button>
+                </div>
+                <div class="card">
+                    <div class="card__img-wrapper">
+                        <img src="/images/cups/yellow%20without%20shedow.png" alt="" class="card__img">
+                    </div>
+                    <p class="card__title">Americano</p>
+                    <p class="card__desc">Our cafe will serve you quickly</p>
+                    <div class="card__row">
+                        <p class="card__price">10,45$</p>
+                        <p class="card__size">330 ml</p>
+                    </div>
+                    <button href="#!" class="btn card__btn">Buy Product</button>
+                </div>
+                <div class="card">
+                    <div class="card__img-wrapper">
+                        <img src="/images/cups/green%20without%20shedow.png" alt="" class="card__img">
+                    </div>
+                    <p class="card__title">Cappuccino</p>
+                    <p class="card__desc">Our cafe will serve you quickly</p>
+                    <div class="card__row">
+                        <p class="card__price">8,45$</p>
+                        <p class="card__size">330 ml</p>
+                    </div>
+                    <button href="#!" class="btn card__btn">Buy Product</button>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="events">
+        <div class="container">
+            <div class="text-row text-row--reverse">
+                <h2 class="title text-row__title">Our New <span class="text-gradient">Events</span></h2>
+                <p class="text-row__desc">
+                    Only in 2021 we have made more than 100,000 orders for you, your loved ones, all of you, and in 2022
+                    we are ready to destroy the market
+                </p>
             </div>
 
+
+            <div class="events__inner-wrapper">
+                <div class="event event--price">
+                    <h3 class="event__title">TWO COFFEE FOR 1 PRICE</h3>
+                    <a href="#!" class="btn event__btn">More</a>
+                </div>
+                <div class="event event--kitchen">
+                    <h3 class="event__title">KITCHEN TOUR</h3>
+                    <a href="#!" class="btn event__btn">More</a>
+                </div>
+                <div class="event event--free">
+                    <h3 class="event__title">FREE COFFEE FOR 3 COFFEE</h3>
+                    <a href="#!" class="btn event__btn">More</a>
+                </div>
+                <div class="event event--social">
+                    <h3 class="event__title">OUR SOCIALS</h3>
+                    <a href="#!" class="btn event__btn">More</a>
+                </div>
+                <div class="event event--choose">
+                    <h3 class="event__title">WHERE ARE YOU CHOOSE US?</h3>
+                    <a href="#!" class="btn event__btn">More</a>
+                </div>
+            </div>
         </div>
     </section>
 </main>
