--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                     <a href="#!" class="btn event__btn">More</a>
                 </div>
                 <div class="event event--kitchen">
-                    <h3 class="event__title">KITCHEN TOUR</h3>
+                    <h3 class="event__title">KITCHEN<br>TOUR</h3>
                     <a href="#!" class="btn event__btn">More</a>
                 </div>
                 <div class="event event--free">
@@ -191,12 +191,31 @@
                     <a href="#!" class="btn event__btn">More</a>
                 </div>
                 <div class="event event--social">
-                    <h3 class="event__title">OUR SOCIALS</h3>
+                    <h3 class="event__title">OUR<br>SOCIALS</h3>
                     <a href="#!" class="btn event__btn">More</a>
                 </div>
                 <div class="event event--choose">
                     <h3 class="event__title">WHERE ARE YOU CHOOSE US?</h3>
                     <a href="#!" class="btn event__btn">More</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="contacts">
+        <div class="contacts__text">
+            <div class="container">
+                <h2 class="title contacts__title">Our <span class="text-gradient">Contacts</span></h2>
+                <p class="contacts__desc">Have time to buy the most harmonious drinks in the new Starbucks coffee and
+                    don't forget about the discount!</p>
+                <a href="tel:+79999999999" class="contacts__phone">
+                    +7-999-999-99-99
+                </a>
+            </div>
+
+            <div class="contacts__img-wrapper">
+                <div class="contacts__img-inner-wrapper">
+                    <img src="/images/room.jpg" alt="" class="contacts__img">
                 </div>
             </div>
         </div>
