--- a/index.html
+++ b/index.html
@@ -203,8 +203,8 @@
     </section>
 
     <section class="contacts">
-        <div class="contacts__text">
-            <div class="container">
+        <div class="container">
+            <div class="contacts__text">
                 <h2 class="title contacts__title">Our <span class="text-gradient">Contacts</span></h2>
                 <p class="contacts__desc">Have time to buy the most harmonious drinks in the new Starbucks coffee and
                     don't forget about the discount!</p>
@@ -215,12 +215,47 @@
 
             <div class="contacts__img-wrapper">
                 <div class="contacts__img-inner-wrapper">
-                    <img src="/images/room.jpg" alt="" class="contacts__img">
+                    <img src="/images/signboard.jpg" alt="" class="contacts__img">
                 </div>
             </div>
         </div>
     </section>
 </main>
+
+<footer class="footer">
+    <div class="container">
+        <div class="footer__row">
+            <a href="#!" class="logo text-gradient footer__logo">Starbucks</a>
+            <nav class="footer__nav">
+                <div class="footer__nav-col">
+                    <a href="#!" class="footer__nav-link">Main</a>
+                    <a href="#!" class="footer__nav-link">Buy</a>
+                    <a href="#!" class="footer__nav-link">More</a>
+                </div>
+                <div class="footer__nav-col">
+                    <a href="#!" class="footer__nav-link">We make</a>
+                    <a href="#!" class="footer__nav-link">Process</a>
+                </div>
+                <div class="footer__nav-col">
+                    <a href="#!" class="footer__nav-link">Products</a>
+                    <a href="#!" class="footer__nav-link">Cappuccino</a>
+                    <a href="#!" class="footer__nav-link">Fast</a>
+                    <a href="#!" class="footer__nav-link">Latte</a>
+                </div>
+                <div class="footer__nav-col">
+                    <a href="#!" class="footer__nav-link">Evens</a>
+                    <a href="#!" class="footer__nav-link">Drinks</a>
+                    <a href="#!" class="footer__nav-link">Eat</a>
+                </div>
+            </nav>
+
+            <a href="#!" class="footer__up-link">
+                <img src="./images/icons/arrow.svg" alt="" class="footer__arrow">
+            </a>
+        </div>
+        <a href="tel:+79999999999" class="footer__phone">+7-999-999-99-99</a>
+    </div>
+</footer>
 
 </body>
 </html>
