--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Starbucks Landing</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body id="top">
 
 <header class="header">
     <div class="container">
@@ -16,7 +16,7 @@
         <nav class="header__nav">
             <a href="#!" class="header__link">Home</a>
             <a href="#!" class="header__link">Select</a>
-            <a href="#!" class="header__link">Shop</a>
+            <a href="#products" class="header__link">Shop</a>
         </nav>
     </div>
 </header>
@@ -104,7 +104,7 @@
         </div>
     </section>
 
-    <section class="products">
+    <section id="products" class="products">
         <div class="container">
             <div class="text-row">
                 <h2 class="title text-row__title">New Our <span class="text-gradient">Products</span></h2>
@@ -249,11 +249,11 @@
                 </div>
             </nav>
 
-            <a href="#!" class="footer__up-link">
+            <a href="#top" class="footer__up-link">
                 <img src="./images/icons/arrow.svg" alt="" class="footer__arrow">
             </a>
         </div>
-        <a href="tel:+79999999999" class="footer__phone">+7-999-999-99-99</a>
+        <a href="tel:+79999999999" class="footer__phone text-gradient">+7-999-999-99-99</a>
     </div>
 </footer>
 
