--- a/index.html
+++ b/index.html
@@ -109,7 +109,8 @@
                 <h2 class="title text-row__title">New Our <span class="text-gradient">Products</span></h2>
                 <p class="text-row__desc">
                     Have time to buy the most harmonious drinks in the new Starbucks coffee and don't forget about the
-                    discount! <span class="hide-text-mobile">Starbucks coffee and don't forget about the discount!</span>
+                    discount! <span
+                        class="hide-text-mobile">Starbucks coffee and don't forget about the discount!</span>
                 </p>
             </div>
             <div class="products__cards">
@@ -258,6 +259,3 @@
 
 </body>
 </html>
-
-
-
