--- a/index.html
+++ b/index.html
@@ -65,14 +65,14 @@
             <p class="benefits__badge">we<br>have</p>
             <div class="benefits__item">
                 <div class="benefits__img-wrapper">
-                    <img src="images/icons/3d/heart.png" alt="" class="benefits__icon benefits__heard">
+                    <img src="./images/icons/3d/heart.png" alt="" class="benefits__icon benefits__heard">
                 </div>
                 <p class="benefits__title">Tasty</p>
                 <p class="benefits__desc">We have the most delicious coffee</p>
             </div>
             <div class="benefits__item">
                 <div class="benefits__img-wrapper">
-                    <img src="images/icons/3d/rocket.png" alt="" class="benefits__icon benefits__rocket">
+                    <img src="./images/icons/3d/rocket.png" alt="" class="benefits__icon benefits__rocket">
                 </div>
                 <p class="benefits__title">Fast</p>
                 <p class="benefits__desc">Our cafe will serve you quickly</p>
@@ -80,7 +80,7 @@
             </div>
             <div class="benefits__item">
                 <div class="benefits__img-wrapper">
-                    <img src="images/icons/3d/money.png" alt="" class="benefits__icon benefits__money">
+                    <img src="./images/icons/3d/money.png" alt="" class="benefits__icon benefits__money">
                 </div>
                 <p class="benefits__title">Available</p>
                 <p class="benefits__desc">Cafe will serveat the most pleasant prices</p>
@@ -92,13 +92,13 @@
     <section class="history">
         <div class="container">
             <div class="history__img-wrapper">
-                <img src="/images/room.jpg" alt="" class="history__img">
+                <img src="./images/room.jpg" alt="" class="history__img">
             </div>
             <div class="history__text">
                 <h2 class="title history__title">We make <span class="text-gradient">delicious</span></h2>
                 <p class="history__desc">Only in 2021 we have made more than 100,000 orders for you, your loved ones,
                     all of you, and in 2022 we are ready to destroy the market</p>
-                <img src="/images/kitchen.jpg" alt="" class="history__pic">
+                <img src="./images/kitchen.jpg" alt="" class="history__pic">
             </div>
         </div>
     </section>
@@ -116,7 +116,7 @@
             <div class="products__cards">
                 <div class="card">
                     <div class="card__img-wrapper">
-                        <img src="/images/cups/green%20without%20shedow.png" alt="" class="card__img">
+                        <img src="./images/cups/green%20without%20shedow.png" alt="" class="card__img">
                     </div>
                     <p class="card__title">Latte</p>
                     <p class="card__desc">Our cafe will serve you quickly</p>
@@ -124,11 +124,11 @@
                         <p class="card__price">7,45$</p>
                         <p class="card__size">330 ml</p>
                     </div>
-                    <button href="#!" class="btn card__btn">Buy Product</button>
+                    <button class="btn card__btn">Buy Product</button>
                 </div>
                 <div class="card">
                     <div class="card__img-wrapper">
-                        <img src="/images/cups/brown%20without%20shedow.png" alt="" class="card__img">
+                        <img src="./images/cups/brown%20without%20shedow.png" alt="" class="card__img">
                     </div>
                     <p class="card__title">Espresso</p>
                     <p class="card__desc">Our cafe will serve you quickly</p>
@@ -136,11 +136,11 @@
                         <p class="card__price">3,45$</p>
                         <p class="card__size">330 ml</p>
                     </div>
-                    <button href="#!" class="btn card__btn">Buy Product</button>
+                    <button class="btn card__btn">Buy Product</button>
                 </div>
                 <div class="card">
                     <div class="card__img-wrapper">
-                        <img src="/images/cups/yellow%20without%20shedow.png" alt="" class="card__img">
+                        <img src="./images/cups/yellow%20without%20shedow.png" alt="" class="card__img">
                     </div>
                     <p class="card__title">Americano</p>
                     <p class="card__desc">Our cafe will serve you quickly</p>
@@ -148,11 +148,11 @@
                         <p class="card__price">10,45$</p>
                         <p class="card__size">330 ml</p>
                     </div>
-                    <button href="#!" class="btn card__btn">Buy Product</button>
+                    <button class="btn card__btn">Buy Product</button>
                 </div>
                 <div class="card">
                     <div class="card__img-wrapper">
-                        <img src="/images/cups/green%20without%20shedow.png" alt="" class="card__img">
+                        <img src="./images/cups/green%20without%20shedow.png" alt="" class="card__img">
                     </div>
                     <p class="card__title">Cappuccino</p>
                     <p class="card__desc">Our cafe will serve you quickly</p>
@@ -160,7 +160,7 @@
                         <p class="card__price">8,45$</p>
                         <p class="card__size">330 ml</p>
                     </div>
-                    <button href="#!" class="btn card__btn">Buy Product</button>
+                    <button class="btn card__btn">Buy Product</button>
                 </div>
             </div>
         </div>
@@ -215,7 +215,7 @@
 
             <div class="contacts__img-wrapper">
                 <div class="contacts__img-inner-wrapper">
-                    <img src="/images/signboard.jpg" alt="" class="contacts__img">
+                    <img src="./images/signboard.jpg" alt="" class="contacts__img">
                 </div>
             </div>
         </div>
